add the santiy test script

--- a/Part2/Makefile
+++ b/Part2/Makefile
@@ -1,5 +1,8 @@
-SOURCES = *.py lab3a
-TARFILE = lab3a-005229714.tar.gz
+SOURCES = *.py lab3b README Makefile
+TARFILE = lab3b-005229714.tar.gz
+
+default:
+	chmod 755 lab3b
 
 clean:
 	rm -f $(TARFILE) *~
