--- a/Part2/Makefile
+++ b/Part2/Makefile
@@ -1,11 +1,12 @@
-SOURCES = *.py lab3b README Makefile
+SOURCES = *.py README Makefile *.sh
 TARFILE = lab3b-005229714.tar.gz
 
 default:
+	cp lab3b.sh lab3b
 	chmod 755 lab3b
 
 clean:
-	rm -f $(TARFILE) *~
+	rm -f $(TARFILE) *~ lab3b
 
 dist:
 	tar -cvzf $(TARFILE) $(SOURCES)
